--- a/app.json
+++ b/app.json
@@ -1,18 +1,18 @@
 {
-  "name": "Gost",
-  "description": "Deploy Gost to Heroku.",
-  "keywords": ["Gost"],
+  "name": "Gst",
+  "description": "Deploy Gst to Heroku.",
+  "keywords": ["Gst"],
   "env": {
     "METHOD": {
-       "description": "Encryption method, null by default(table), the following methods are supported: aes-128-cfb, aes-192-cfb, aes-256-cfb, bf-cfb, cast5-cfb, des-cfb, rc4-md5, rc4-md5-6, chacha20, salsa20, rc4, table.",
+       "description": "aes-128-cfb, aes-192-cfb, aes-256-cfb, bf-cfb, cast5-cfb, des-cfb, rc4-md5, rc4-md5-6, chacha20, salsa20, rc4, table(null by default).",
        "value": "chacha20"
      },
      "PASSWORD": {
-       "description": "A password used to encrypt transfer.",
-       "value": "ss123456"
+       "description": "Encryption password.",
+       "value": "34abcd12"
      }
   },
   "stack": "container",
-  "website": "https://github.com/xiaokaixuan/gost-heroku",
-  "repository": "https://github.com/xiaokaixuan/gost-heroku"
+  "website": "https://github.com/omdbsd/gst-hrk",
+  "repository": "https://github.com/omdbsd/gst-hrk"
  }
