--- a/app.json
+++ b/app.json
@@ -4,8 +4,8 @@
   "keywords": ["Gst"],
   "env": {
     "METHOD": {
-       "description": "aes-128-cfb, aes-192-cfb, aes-256-cfb, bf-cfb, cast5-cfb, des-cfb, rc4-md5, rc4-md5-6, chacha20, salsa20, rc4, table(null by default).",
-       "value": "chacha20"
+       "description": "aes-128-cfb, aes-192-cfb, aes-256-cfb, aes-128-ctr, aes-192-ctr, aes-256-ctr, des-cfb, bf-cfb, cast5-cfb, rc4-md5, chacha20, chacha20-ietf, salsa20, xchacha20, CHACHA20-IETF-POLY1305, AES-128-GCM, AES-192-GCM, AES-256-GCM.",
+       "value": "cast5-cfb"
      },
      "PASSWORD": {
        "description": "Encryption password.",
